tests/fail/undefined_variable.kr
# Test: Using undefined variable
# Expected: Error: Undefined variable 'unknown'

print unknown

